*** empty log message ***

--- a/emacspeak/etc/NEWS
+++ b/emacspeak/etc/NEWS
@@ -7,6 +7,10 @@ Author: T. V. Raman <raman@cs.cornell.edu>
 Emacspeak 19.0 provides the following user level enhancements:
 
 * New Emacspeak Features:
+** emacspeak-nxml.el:
+
+Speech-enables James Clark's nxml-mode --- a powerful  XML editing mode.
+
 
 ** emacspeak-ocr.el:
 
